parser/src/parser/expressions/snapshots/parser__parser__expressions__return_expr__tests__parse_return_expr.snap
---
source: parser/src/parser/expressions/return_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 23)
  FN_DEF@[0; 23)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 23)
      BLOCK@[10; 23)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 21)
          RETURN_EXPR@[11; 21)
            RETURN_KW@[11; 17) "return"
            WHITESPACE@[17; 18) " "
            BIN_EXPR@[18; 21)
              LITERAL@[18; 19)
                INT_NUMBER@[18; 19) "1"
              PLUS@[19; 20) "+"
              LITERAL@[20; 21)
                INT_NUMBER@[20; 21) "1"
        SEMI@[21; 22) ";"
        R_CURLY@[22; 23) "}"

